# aloy

./: .editorconfig  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
apps/api/: .gitignore  package.json  wrangler.toml.example
apps/api/.bruno/: bruno.json
apps/api/migrations/: 0000_init.sql
apps/api/src/: index.ts
servers/: Makefile  openapi.yml  readme.md
servers/.bruno/: bruno.json
servers/.bruno/environments/: python.bru
servers/.bruno/pins/: get.bru  post.bru
servers/cloudflare-workers/: .gitignore  package.json  readme.md  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml.example
servers/cloudflare-workers/src/: env.d.ts  helpers.test.ts  helpers.ts  index.test.ts  index.ts  types.ts  validator.ts  (+1 more)
servers/go/: .env  .env.example  .gitignore  Dockerfile  Makefile  go.mod  go.sum  readme.md  server.go
servers/migrations/: 0000_init.sql  0001_attachments.sql
servers/python/: .env.example  .gitignore  Makefile  configs.py  pyproject.toml  readme.md  server.py
servers/python/db/: __init__.py  db.py
servers/python/handlers/: __init__.py
servers/python/handlers/v1/: __init__.py  comments.py  pins.py  users.py
servers/python/middlewares/: __init__.py  app.py  user.py
servers/python/routes/: deps.py
servers/python/routes/v1/: __init__.py  comments.py  pins.py  shared.py  users.py
servers/python/storage/: storage.py
servers/python/tests/: configs.py  conftest.py  helpers.py  test_server.py
servers/python/tests/routes/v1/: test_comments.py  test_pins.py  test_shared.py  test_users.py
(+68 files in other folders)
